[gd_scene load_steps=13 format=3 uid="uid://dd0r1cokjlsj3"]

[ext_resource type="Script" uid="uid://dswfduxi8a8du" path="res://scripts/game.gd" id="1_d1c63"]
[ext_resource type="PackedScene" uid="uid://71rc8k32st6a" path="res://scenes/Player.tscn" id="1_kqs1s"]
[ext_resource type="FontFile" uid="uid://dyej5eb8ymwwc" path="res://fonts/Silkscreen.ttf" id="2_32lhk"]
[ext_resource type="StyleBox" uid="uid://dfbtt2bkedy5v" path="res://buttons/Default.tres" id="3_7g83o"]
[ext_resource type="AudioStream" uid="uid://dkr6vtv5uglix" path="res://sounds/theme.ogg" id="5_1lgw5"]

[sub_resource type="Environment" id="Environment_jeodi"]
background_mode = 3
tonemap_mode = 4
glow_enabled = true
glow_intensity = 2.0
glow_bloom = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jeodi"]

[sub_resource type="Gradient" id="Gradient_jeodi"]
offsets = PackedFloat32Array(0, 0.488372, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1tnoa"]
gradient = SubResource("Gradient_jeodi")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1tnoa"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape_scale = Vector3(60, 60, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
angle_min = 1.07288e-05
angle_max = 360.0
direction = Vector3(0, 0, 0)
angular_velocity_min = -100.0
angular_velocity_max = 100.0
orbit_velocity_min = 9.49949e-08
orbit_velocity_max = 9.49949e-08
radial_velocity_min = -2.23517e-05
radial_velocity_max = -2.23517e-05
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 12.0
color_ramp = SubResource("GradientTexture1D_1tnoa")
hue_variation_min = -2.23517e-08
hue_variation_max = 1.0
turbulence_noise_strength = 6.3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1lgw5"]
size = Vector2(50, 6050)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1c63"]
bg_color = Color(0.792317, 0.789104, 0.893934, 0.568627)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 20
shadow_color = Color(0, 0, 0, 0.392157)

[node name="Game" type="Node2D"]
script = ExtResource("1_d1c63")
metadata/_edit_horizontal_guides_ = [-1080.0, -1030.0]
metadata/_edit_vertical_guides_ = [-1870.0]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jeodi")

[node name="Background" type="ColorRect" parent="."]
offset_left = -3001.0
offset_top = -2999.0
offset_right = 3050.0
offset_bottom = 3050.0
color = Color(0.0453133, 0.0378, 0.07, 1)

[node name="StarPaticles" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_jeodi")
scale = Vector2(50, 50)
amount = 10000
lifetime = 3.0
process_material = SubResource("ParticleProcessMaterial_1tnoa")

[node name="Player" parent="." instance=ExtResource("1_kqs1s")]
visible = false
self_modulate = Color(0, 0, 0, 1)
light_mask = 3
z_index = 10

[node name="Border" type="Node2D" parent="."]
light_mask = 3
visibility_layer = 3
z_index = 100

[node name="TopBorderArea" type="StaticBody2D" parent="Border"]
position = Vector2(-3000, -3000)
collision_layer = 2
collision_mask = 2

[node name="Border" type="ColorRect" parent="Border/TopBorderArea"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 6000.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="Border/TopBorderArea"]
offset_left = -2000.0
offset_top = -1500.0
offset_bottom = 7500.0
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/TopBorderArea"]
position = Vector2(3025, 25)
rotation = 1.5708
shape = SubResource("RectangleShape2D_1lgw5")
debug_color = Color(0, 1, 0, 0.419608)

[node name="BottomBorderArea" type="StaticBody2D" parent="Border"]
collision_layer = 2
collision_mask = 2

[node name="Border" type="ColorRect" parent="Border/BottomBorderArea"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3000.0
offset_top = 3000.0
offset_right = 3050.0
offset_bottom = 3050.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="Border/BottomBorderArea"]
offset_left = -5000.0
offset_top = 3050.0
offset_right = 5050.0
offset_bottom = 5050.0
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/BottomBorderArea"]
position = Vector2(25, 3025)
rotation = 1.5708
shape = SubResource("RectangleShape2D_1lgw5")
debug_color = Color(0, 1, 0, 0.419608)

[node name="LeftBorderArea" type="StaticBody2D" parent="Border"]
collision_layer = 2
collision_mask = 2

[node name="Border" type="ColorRect" parent="Border/LeftBorderArea"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3000.0
offset_top = -3000.0
offset_right = -2950.0
offset_bottom = 3000.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="Border/LeftBorderArea"]
offset_left = -5000.0
offset_top = -5000.0
offset_right = 5050.0
offset_bottom = -3000.0
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/LeftBorderArea"]
position = Vector2(-2975, 25)
shape = SubResource("RectangleShape2D_1lgw5")
debug_color = Color(0, 1, 0, 0.419608)

[node name="RightBorderArea" type="StaticBody2D" parent="Border"]
collision_layer = 2
collision_mask = 2

[node name="Border" type="ColorRect" parent="Border/RightBorderArea"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 3000.0
offset_top = -3000.0
offset_right = 3050.0
offset_bottom = 3000.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="Border/RightBorderArea"]
offset_left = 3050.0
offset_top = -4500.0
offset_right = 5050.0
offset_bottom = 4500.0
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/RightBorderArea"]
position = Vector2(3025, 25)
shape = SubResource("RectangleShape2D_1lgw5")
debug_color = Color(0, 1, 0, 0.419608)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="MainMenu" type="Node2D" parent="CanvasLayer"]

[node name="Logo" type="Button" parent="CanvasLayer/MainMenu"]
offset_left = -1700.0
offset_top = -900.0
offset_right = 1700.0
offset_bottom = -300.0
scale = Vector2(0.998365, 0.663756)
theme_override_fonts/font = ExtResource("2_32lhk")
theme_override_font_sizes/font_size = 330
theme_override_styles/focus = ExtResource("3_7g83o")
theme_override_styles/disabled_mirrored = ExtResource("3_7g83o")
theme_override_styles/disabled = ExtResource("3_7g83o")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_7g83o")
theme_override_styles/hover_pressed = ExtResource("3_7g83o")
theme_override_styles/hover_mirrored = ExtResource("3_7g83o")
theme_override_styles/hover = ExtResource("3_7g83o")
theme_override_styles/pressed_mirrored = ExtResource("3_7g83o")
theme_override_styles/pressed = ExtResource("3_7g83o")
theme_override_styles/normal_mirrored = ExtResource("3_7g83o")
theme_override_styles/normal = ExtResource("3_7g83o")
text = "ORBIT OF PAIN"

[node name="StartButton" type="Button" parent="CanvasLayer/MainMenu"]
offset_left = -600.0
offset_top = -300.0
offset_right = 600.0
offset_bottom = 100.0
scale = Vector2(0.998365, 0.663756)
theme_override_fonts/font = ExtResource("2_32lhk")
theme_override_font_sizes/font_size = 200
theme_override_styles/focus = ExtResource("3_7g83o")
theme_override_styles/disabled_mirrored = ExtResource("3_7g83o")
theme_override_styles/disabled = ExtResource("3_7g83o")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_7g83o")
theme_override_styles/hover_pressed = ExtResource("3_7g83o")
theme_override_styles/hover_mirrored = ExtResource("3_7g83o")
theme_override_styles/hover = SubResource("StyleBoxFlat_d1c63")
theme_override_styles/pressed_mirrored = ExtResource("3_7g83o")
theme_override_styles/pressed = ExtResource("3_7g83o")
theme_override_styles/normal_mirrored = ExtResource("3_7g83o")
theme_override_styles/normal = ExtResource("3_7g83o")
text = "START"

[node name="ControlsButton" type="Button" parent="CanvasLayer/MainMenu"]
offset_left = -600.0
offset_right = 600.0
offset_bottom = 400.0
scale = Vector2(0.998365, 0.663756)
theme_override_fonts/font = ExtResource("2_32lhk")
theme_override_font_sizes/font_size = 200
theme_override_styles/focus = ExtResource("3_7g83o")
theme_override_styles/disabled_mirrored = ExtResource("3_7g83o")
theme_override_styles/disabled = ExtResource("3_7g83o")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_7g83o")
theme_override_styles/hover_pressed = ExtResource("3_7g83o")
theme_override_styles/hover_mirrored = ExtResource("3_7g83o")
theme_override_styles/hover = SubResource("StyleBoxFlat_d1c63")
theme_override_styles/pressed_mirrored = ExtResource("3_7g83o")
theme_override_styles/pressed = ExtResource("3_7g83o")
theme_override_styles/normal_mirrored = ExtResource("3_7g83o")
theme_override_styles/normal = ExtResource("3_7g83o")
text = "Manual"

[node name="CreditsButton" type="Button" parent="CanvasLayer/MainMenu"]
offset_left = -600.0
offset_top = 300.0
offset_right = 600.0
offset_bottom = 700.0
scale = Vector2(0.998365, 0.663756)
theme_override_fonts/font = ExtResource("2_32lhk")
theme_override_font_sizes/font_size = 200
theme_override_styles/focus = ExtResource("3_7g83o")
theme_override_styles/disabled_mirrored = ExtResource("3_7g83o")
theme_override_styles/disabled = ExtResource("3_7g83o")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_7g83o")
theme_override_styles/hover_pressed = ExtResource("3_7g83o")
theme_override_styles/hover_mirrored = ExtResource("3_7g83o")
theme_override_styles/hover = SubResource("StyleBoxFlat_d1c63")
theme_override_styles/pressed_mirrored = ExtResource("3_7g83o")
theme_override_styles/pressed = ExtResource("3_7g83o")
theme_override_styles/normal_mirrored = ExtResource("3_7g83o")
theme_override_styles/normal = ExtResource("3_7g83o")
text = "CREDITS"

[node name="ExitButton" type="Button" parent="CanvasLayer/MainMenu"]
offset_left = -600.0
offset_top = 600.0
offset_right = 600.0
offset_bottom = 1000.0
scale = Vector2(0.998365, 0.663756)
theme_override_fonts/font = ExtResource("2_32lhk")
theme_override_font_sizes/font_size = 200
theme_override_styles/focus = ExtResource("3_7g83o")
theme_override_styles/disabled_mirrored = ExtResource("3_7g83o")
theme_override_styles/disabled = ExtResource("3_7g83o")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_7g83o")
theme_override_styles/hover_pressed = ExtResource("3_7g83o")
theme_override_styles/hover_mirrored = ExtResource("3_7g83o")
theme_override_styles/hover = SubResource("StyleBoxFlat_d1c63")
theme_override_styles/pressed_mirrored = ExtResource("3_7g83o")
theme_override_styles/pressed = ExtResource("3_7g83o")
theme_override_styles/normal_mirrored = ExtResource("3_7g83o")
theme_override_styles/normal = ExtResource("3_7g83o")
text = "EXIT"

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1lgw5")
volume_db = -12.0

[connection signal="pressed" from="CanvasLayer/MainMenu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/StartButton" to="CanvasLayer/MainMenu" method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/ExitButton" to="." method="_on_exit_button_pressed"]
